--- a/trunk/configs/boards/BN750DB/kernel-3.0.x.config
+++ b/trunk/configs/boards/BN750DB/kernel-3.0.x.config
@@ -1886,6 +1886,7 @@ CONFIG_RTL8367_IGMP_SNOOPING=y
 # Ralink Wired Ethernet Driver
 #
 CONFIG_RAETH=y
+CONFIG_RAETH_NAPI=y
 # CONFIG_RAETH_JUMBOFRAME is not set
 CONFIG_RAETH_HW_VLAN_TX=y
 CONFIG_RAETH_CHECKSUM_OFFLOAD=y
