--- a/trunk/configs/boards/BN750DB/kernel-3.0.x.config
+++ b/trunk/configs/boards/BN750DB/kernel-3.0.x.config
@@ -840,6 +840,7 @@ CONFIG_RT2880_MTD_PHYSMAP_BUSWIDTH=2
 # CONFIG_RT2880_ROOTFS_IN_RAM is not set
 CONFIG_RT2880_ROOTFS_IN_FLASH=y
 CONFIG_ROOTFS_IN_FLASH_NO_PADDING=y
+CONFIG_MTD_STORE_PART_SIZ=0x10000
 # CONFIG_PARPORT is not set
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_CPQ_DA is not set
