--- a/trunk/configs/boards/RT-N14U/kernel-3.0.x.config
+++ b/trunk/configs/boards/RT-N14U/kernel-3.0.x.config
@@ -824,6 +824,7 @@ CONFIG_RT2880_MTD_PHYSMAP_BUSWIDTH=2
 # CONFIG_RT2880_ROOTFS_IN_RAM is not set
 CONFIG_RT2880_ROOTFS_IN_FLASH=y
 CONFIG_ROOTFS_IN_FLASH_NO_PADDING=y
+CONFIG_MTD_STORE_PART_SIZ=0x40000
 # CONFIG_PARPORT is not set
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_COW_COMMON is not set
