ralink spi: set FAST/DOR/DIOR from kernel config, support DOR on Macronix chips, set N14U to DOR mode (compat with Macronix)

--- a/trunk/configs/boards/BN750DB/kernel-3.4.x.config
+++ b/trunk/configs/boards/BN750DB/kernel-3.4.x.config
@@ -820,6 +820,8 @@ CONFIG_MTD_RALINK=y
 # CONFIG_MTD_NOR_RALINK is not set
 CONFIG_MTD_SPI_RALINK=y
 # CONFIG_MTD_SPI_FAST_CLOCK is not set
+CONFIG_MTD_SPI_READ_NORM=y
+# CONFIG_MTD_SPI_READ_FAST is not set
 # CONFIG_MTD_NAND_RALINK is not set
 # CONFIG_RT2880_FLASH_4M is not set
 CONFIG_RT2880_FLASH_8M=y
