--- a/trunk/configs/boards/RT-N65U/kernel-3.0.x.config
+++ b/trunk/configs/boards/RT-N65U/kernel-3.0.x.config
@@ -777,6 +777,8 @@ CONFIG_MTD_RALINK=y
 # CONFIG_MTD_NOR_RALINK is not set
 CONFIG_MTD_SPI_RALINK=y
 CONFIG_MTD_SPI_FAST_CLOCK=y
+CONFIG_MTD_SPI_READ_NORM=y
+# CONFIG_MTD_SPI_READ_FAST is not set
 # CONFIG_MTD_NAND_RALINK is not set
 # CONFIG_RT2880_FLASH_4M is not set
 # CONFIG_RT2880_FLASH_8M is not set
