--- a/trunk/configs/boards/RT-AC51U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC51U/kernel-3.4.x.config
@@ -1969,8 +1969,8 @@ CONFIG_RT2860V2_AP_RTMP_TEMPERATURE_COMPENSATION=y
 # CONFIG_RT2860V2_AP_ADJ_PWR_CONSUMPTION_SUPPORT is not set
 CONFIG_RT2860V2_AP_AUTO_CH_SELECT_ENHANCE=y
 # CONFIG_RT2860V2_AP_80211N_DRAFT3 is not set
-CONFIG_RT2860V2_AP_IGMP_SNOOP=y
-CONFIG_RT2860V2_AP_MCAST_RATE_SPECIFIC=y
+# CONFIG_RT2860V2_AP_IGMP_SNOOP is not set
+# CONFIG_RT2860V2_AP_MCAST_RATE_SPECIFIC is not set
 # CONFIG_RT2860V2_AP_NETIF_BLOCK is not set
 CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD=y
 CONFIG_RT2860V2_AP_SINGLE_SKU=y
@@ -1990,7 +1990,6 @@ CONFIG_MT7610_AP_MBSS=y
 # CONFIG_MT7610_AP_MBSS_NEW_MBSSID_MODE is not set
 CONFIG_MT7610_AP_APCLI=y
 # CONFIG_MT7610_AP_MAC_REPEATER is not set
-CONFIG_MT7610_AP_IGMP_SNOOP=y
 # CONFIG_MT7610_AP_NETIF_BLOCK is not set
 # CONFIG_MT7610_AP_DFS is not set
 # CONFIG_MT7610_AP_CARRIER is not set
@@ -1998,7 +1997,8 @@ CONFIG_MT7610_AP_IGMP_SNOOP=y
 # CONFIG_MT7610_AP_DLS is not set
 # CONFIG_MT7610_AP_IDS is not set
 # CONFIG_MT7610_AP_80211N_DRAFT3 is not set
-CONFIG_MT7610_AP_MCAST_RATE_SPECIFIC=y
+# CONFIG_MT7610_AP_IGMP_SNOOP is not set
+# CONFIG_MT7610_AP_MCAST_RATE_SPECIFIC is not set
 # CONFIG_MT7610_AP_TSSI_COMPENSATION is not set
 CONFIG_MT7610_AP_TEMPERATURE_COMPENSATION=y
 CONFIG_MT7610_AP_SINGLE_SKU=y
