--- a/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
@@ -1901,8 +1901,8 @@ CONFIG_RT2860V2_AP_RTMP_INTERNAL_TX_ALC=y
 # CONFIG_RT2860V2_AP_ADJ_PWR_CONSUMPTION_SUPPORT is not set
 CONFIG_RT2860V2_AP_AUTO_CH_SELECT_ENHANCE=y
 # CONFIG_RT2860V2_AP_80211N_DRAFT3 is not set
-CONFIG_RT2860V2_AP_IGMP_SNOOP=y
-CONFIG_RT2860V2_AP_MCAST_RATE_SPECIFIC=y
+# CONFIG_RT2860V2_AP_IGMP_SNOOP is not set
+# CONFIG_RT2860V2_AP_MCAST_RATE_SPECIFIC is not set
 # CONFIG_RT2860V2_AP_NETIF_BLOCK is not set
 CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD=y
 # CONFIG_RT2860V2_AP_SINGLE_SKU is not set
