--- a/trunk/configs/boards/RT-N65U/kernel-3.0.x.config
+++ b/trunk/configs/boards/RT-N65U/kernel-3.0.x.config
@@ -1862,8 +1862,8 @@ CONFIG_RT2860V2_AP_GREENAP=y
 # CONFIG_RT2860V2_AP_TXBF is not set
 CONFIG_RT2860V2_AP_AUTO_CH_SELECT_ENHANCE=y
 # CONFIG_RT2860V2_AP_80211N_DRAFT3 is not set
-CONFIG_RT2860V2_AP_IGMP_SNOOP=y
-CONFIG_RT2860V2_AP_MCAST_RATE_SPECIFIC=y
+# CONFIG_RT2860V2_AP_IGMP_SNOOP is not set
+# CONFIG_RT2860V2_AP_MCAST_RATE_SPECIFIC is not set
 # CONFIG_RT2860V2_AP_NETIF_BLOCK is not set
 # CONFIG_RT2860V2_AP_SNMP is not set
 CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD=y
