--- a/trunk/configs/boards/RT-N11P/kernel-3.0.x.config
+++ b/trunk/configs/boards/RT-N11P/kernel-3.0.x.config
@@ -1416,7 +1416,7 @@ CONFIG_RA_HW_NAT_UDP_DLTA=5
 CONFIG_RA_HW_NAT_TCP_DLTA=5
 CONFIG_RA_HW_NAT_FIN_DLTA=5
 CONFIG_RA_HW_NAT_NTU_DLTA=5
-CONFIG_RA_HW_NAT_IPV6=y
+# CONFIG_RA_HW_NAT_IPV6 is not set
 # CONFIG_RA_HW_NAT_MCAST is not set
 CONFIG_RA_HW_NAT_WIFI=y
 # CONFIG_RA_HW_NAT_DEBUG is not set
