--- a/trunk/configs/templates/n11p_nano.config
+++ b/trunk/configs/templates/n11p_nano.config
@@ -24,7 +24,7 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-rt3883
 CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
 
 ### Enable IPv6 support
-CONFIG_FIRMWARE_ENABLE_IPV6=y
+#CONFIG_FIRMWARE_ENABLE_IPV6=y
 
 ### Enable USB support
 #CONFIG_FIRMWARE_ENABLE_USB=y
