--- a/trunk/configs/boards/RT-N11P/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N11P/kernel-3.4.x.config
@@ -316,6 +316,7 @@ CONFIG_HW_HAS_PCI=y
 # CONFIG_PCI is not set
 # CONFIG_ARCH_SUPPORTS_MSI is not set
 CONFIG_MMU=y
+# CONFIG_PCCARD is not set
 
 #
 # Executable file formats
@@ -668,7 +669,7 @@ CONFIG_NET_PPPOE_PTHROUGH=y
 CONFIG_WIRELESS=y
 CONFIG_WIRELESS_EXT=y
 CONFIG_WEXT_CORE=y
-CONFIG_WEXT_PROC=y
+# CONFIG_WEXT_PROC is not set
 CONFIG_WEXT_SPY=y
 CONFIG_WEXT_PRIV=y
 # CONFIG_CFG80211 is not set
@@ -698,6 +699,8 @@ CONFIG_ASUS_NVRAM_API=y
 #
 # Generic Driver Options
 #
+CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
+# CONFIG_DEVTMPFS is not set
 CONFIG_STANDALONE=y
 # CONFIG_PREVENT_FIRMWARE_BUILD is not set
 # CONFIG_FW_LOADER is not set
