wifi drivers: update MT7610E AP driver to 3.0.0.8

--- a/trunk/configs/boards/RT-AC51U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC51U/kernel-3.4.x.config
@@ -1998,6 +1998,7 @@ CONFIG_MT7610_AP_APCLI=y
 # CONFIG_MT7610_AP_DFS is not set
 # CONFIG_MT7610_AP_CARRIER is not set
 # CONFIG_MT7610_AP_ED_MONITOR is not set
+# CONFIG_MT7610_AP_BAND_STEERING is not set
 # CONFIG_MT7610_AP_DLS is not set
 # CONFIG_MT7610_AP_IDS is not set
 # CONFIG_MT7610_AP_80211N_DRAFT3 is not set
