NVRAM: use 128K/124K space for NAND flash (one block/LEB), fill unused space by 0xFF (empty flash data)

--- a/trunk/user/inadyn/Makefile
+++ b/trunk/user/inadyn/Makefile
@@ -27,7 +27,7 @@ DEPS          = $(SRCS:.c=.d)
 CFLAGS       += -W -Wall
 CFLAGS       += -D_BSD_SOURCE -D_GNU_SOURCE
 CFLAGS       += -Iinclude -DVERSION=\"$(VERSION)\"
-CFLAGS       += -Iinclude -I$(SHAREDIR)/include
+CFLAGS       += -Iinclude -I$(SHAREDIR)
 CFLAGS       += -ffunction-sections -fdata-sections
 
 LDFLAGS      += -L$(SHAREDIR) -lshared
