kernel configs: updates after last changes

--- a/trunk/configs/boards/RT-N11P/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N11P/kernel-3.4.x.config
@@ -1371,7 +1371,7 @@ CONFIG_GENERIC_ATOMIC64=y
 #
 CONFIG_RAETH=y
 CONFIG_RAETH_NAPI=y
-# CONFIG_RAETH_32B_DESC is not set
+# CONFIG_RAETH_NAPI_GRO is not set
 # CONFIG_RAETH_JUMBOFRAME is not set
 CONFIG_RAETH_BQL=y
 CONFIG_RAETH_HW_VLAN_TX=y
