--- a/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
@@ -52,7 +52,7 @@ CONFIG_MT7621_ASIC=y
 CONFIG_PCIE_PORT0=y
 CONFIG_PCIE_PORT1=y
 CONFIG_PCIE_PORT2=y
-CONFIG_PCIE_PERST_ONLY=y
+# CONFIG_PCIE_PERST_ONLY is not set
 # CONFIG_RALINK_MT7621_PLL900 is not set
 # CONFIG_RALINK_SYSTICK_COUNTER is not set
 # CONFIG_RT2880_DRAM_16M is not set
@@ -1899,7 +1899,7 @@ CONFIG_GENERIC_ATOMIC64=y
 #
 CONFIG_RAETH=y
 CONFIG_RAETH_NAPI=y
-# CONFIG_RAETH_32B_DESC is not set
+CONFIG_RAETH_NAPI_GRO=y
 # CONFIG_RAETH_JUMBOFRAME is not set
 CONFIG_RAETH_HW_VLAN_RX=y
 CONFIG_RAETH_BQL=y
