--- a/trunk/configs/boards/SWR1100/kernel-3.4.x.config
+++ b/trunk/configs/boards/SWR1100/kernel-3.4.x.config
@@ -1908,6 +1908,7 @@ CONFIG_RTL8367_IGMP_SNOOPING=y
 #
 CONFIG_RAETH=y
 CONFIG_RAETH_NAPI=y
+# CONFIG_RAETH_NAPI_GRO is not set
 # CONFIG_RAETH_JUMBOFRAME is not set
 CONFIG_RAETH_BQL=y
 CONFIG_RAETH_HW_VLAN_TX=y
