project configs: fix ASUS RT-N54U 5GHz MBSSID mode

--- a/trunk/configs/boards/RT-N54U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N54U/kernel-3.4.x.config
@@ -1991,7 +1991,7 @@ CONFIG_MT76X2_AP_LED=y
 CONFIG_MT76X2_AP_LLTD=y
 CONFIG_MT76X2_AP_WDS=y
 CONFIG_MT76X2_AP_MBSS=y
-# CONFIG_MT76X2_AP_MBSS_NEW_MBSSID_MODE is not set
+CONFIG_MT76X2_AP_MBSS_NEW_MBSSID_MODE=y
 CONFIG_MT76X2_AP_APCLI=y
 # CONFIG_MT76X2_AP_APCLI_CERT is not set
 # CONFIG_MT76X2_AP_MAC_REPEATER is not set
