project configs: update MT7621 QDMA-related kernel param

--- a/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
@@ -1898,10 +1898,11 @@ CONFIG_GENERIC_ATOMIC64=y
 #
 CONFIG_RAETH=y
 CONFIG_RAETH_NAPI=y
-CONFIG_RAETH_NAPI_GRO=y
+# CONFIG_RAETH_NAPI_GRO is not set
+CONFIG_RAETH_BQL=y
+# CONFIG_RAETH_QDMA is not set
 # CONFIG_RAETH_JUMBOFRAME is not set
 CONFIG_RAETH_HW_VLAN_RX=y
-CONFIG_RAETH_BQL=y
 CONFIG_RAETH_HW_VLAN_TX=y
 CONFIG_RAETH_CHECKSUM_OFFLOAD=y
 CONFIG_RAETH_SG_DMA_TX=y
