hw_nat: add support MT7621 multicast offload, tidy

--- a/trunk/user/utils/hw_nat/Makefile
+++ b/trunk/user/utils/hw_nat/Makefile
@@ -11,6 +11,11 @@ CFLAGS += -I$(ROOTDIR)/$(LINUXDIR)/net/nat/hw_nat
 
 ifdef CONFIG_HNAT_V2
 CFLAGS += -DCONFIG_HNAT_V2
+ifdef CONFIG_RA_HW_NAT_MCAST
+ifdef CONFIG_RALINK_MT7621
+CFLAGS += -DCONFIG_PPE_MCAST
+endif
+endif
 endif
 
 all: $(EXEC)
