rc: add support wifi soft-blink led, update gpio control

--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -11,6 +11,7 @@ include $(SHDIR)/cflags.mk
 
 CFLAGS += -s -I. -I$(SHDIR) -I$(SHDIR)/include
 CFLAGS += -I$(USERDIR)/wireless_tools
+CFLAGS += -I$(ROOTDIR)/$(LINUXDIR)/include/ralink
 
 # Disable/Enable ugly httpd_check
 #CFLAGS += -DHTTPD_CHECK
