project configs: add soft-blink led params

--- a/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
@@ -1992,6 +1992,8 @@ CONFIG_RT_SECOND_CARD_EEPROM="flash"
 #
 CONFIG_MT76X2_AP=m
 # CONFIG_MT76X2_AP_LED is not set
+CONFIG_MT76X2_AP_LED_SOFT=y
+CONFIG_MT76X2_AP_LED_SOFT_GPIO=15
 # CONFIG_MT76X2_AP_WSC is not set
 CONFIG_MT76X2_AP_LLTD=y
 CONFIG_MT76X2_AP_WDS=y
@@ -2026,6 +2028,8 @@ CONFIG_MT76X2_AP_READ_MAC_FROM_MTD=y
 #
 CONFIG_MT76X3_AP=m
 # CONFIG_MT76X3_AP_LED is not set
+CONFIG_MT76X3_AP_LED_SOFT=y
+CONFIG_MT76X3_AP_LED_SOFT_GPIO=14
 # CONFIG_MT76X3_AP_WSC is not set
 CONFIG_MT76X3_AP_LLTD=y
 CONFIG_MT76X3_AP_WDS=y
