project configs: enable soft-blink 5G led on RT-AC1200HP

--- a/trunk/configs/boards/RT-AC1200HP/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC1200HP/kernel-3.4.x.config
@@ -1989,6 +1989,8 @@ CONFIG_RT2860V2_AP_SINGLE_SKU=y
 #
 CONFIG_MT76X2_AP=m
 # CONFIG_MT76X2_AP_LED is not set
+CONFIG_MT76X2_AP_LED_SOFT=y
+CONFIG_MT76X2_AP_LED_SOFT_GPIO=70
 # CONFIG_MT76X2_AP_WSC is not set
 CONFIG_MT76X2_AP_LLTD=y
 CONFIG_MT76X2_AP_WDS=y
