--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -92,6 +92,8 @@ romfs:
 	cd $(INSTALLDIR)/sbin && ln -sf rc detect_internet
 	cd $(INSTALLDIR)/sbin && ln -sf rc detect_wan
 	cd $(INSTALLDIR)/sbin && ln -sf rc reset_to_defaults
+	cd $(INSTALLDIR)/sbin && ln -sf rc lan_eeprom_mac
+	cd $(INSTALLDIR)/sbin && ln -sf rc wan_eeprom_mac
 	cd $(INSTALLDIR)/sbin && ln -sf rc radio2_restart
 	cd $(INSTALLDIR)/sbin && ln -sf rc radio2_toggle
 	cd $(INSTALLDIR)/sbin && ln -sf rc radio2_toggle_off
