utils: add mii_mgr_cl45 utility to support 'clause 45' MDIO control

--- a/trunk/user/utils/switch/Makefile
+++ b/trunk/user/utils/switch/Makefile
@@ -1,4 +1,4 @@
-EXEC = switch mii_mgr
+EXEC = switch mii_mgr mii_mgr_cl45
 CFLAGS += -I$(ROOTDIR)/$(LINUXDIR)/drivers/net/raeth
 
 ifdef CONFIG_RALINK_MT7620
@@ -25,9 +25,15 @@ switch: switch_gsw.c
 mii_mgr: mii_mgr.c
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^ $(LDLIBS)
 
+mii_mgr_cl45: mii_mgr_cl45.c
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^ $(LDLIBS)
+
 romfs:
 	$(ROMFSINST) /sbin/switch
 	$(ROMFSINST) /sbin/mii_mgr
+ifdef CONFIG_RALINK_MT7621
+	$(ROMFSINST) /sbin/mii_mgr_cl45
+endif
 
 clean:
 	-rm -f $(EXEC) *.elf *.gdb *.o
