--- a/trunk/configs/boards/RT-AC54U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC54U/kernel-3.4.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.106 Kernel Configuration
+# Linux/mips 3.4.107 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -818,17 +818,17 @@ CONFIG_MTD_CFI_I2=y
 #
 CONFIG_MTD_RALINK=y
 CONFIG_MTD_SPI_RALINK=y
-# CONFIG_MTD_SPI_FAST_CLOCK is not set
-# CONFIG_MTD_SPI_READ_NORM is not set
-# CONFIG_MTD_SPI_READ_FAST is not set
-CONFIG_MTD_SPI_READ_DOR=y
-# CONFIG_MTD_SPI_READ_DIOR is not set
 # CONFIG_MTD_NAND_RALINK is not set
+CONFIG_MTD_SPI_FAST_CLOCK=y
+CONFIG_MTD_SPI_READ_NORM=y
+# CONFIG_MTD_SPI_READ_FAST is not set
+# CONFIG_MTD_SPI_READ_DOR is not set
+# CONFIG_MTD_SPI_READ_DIOR is not set
 # CONFIG_RT2880_FLASH_4M is not set
 # CONFIG_RT2880_FLASH_8M is not set
-CONFIG_RT2880_FLASH_16M=y
+# CONFIG_RT2880_FLASH_16M is not set
 # CONFIG_RT2880_FLASH_32M is not set
-# CONFIG_RT2880_FLASH_AUTO is not set
+CONFIG_RT2880_FLASH_AUTO=y
 CONFIG_RT2880_MTD_PHYSMAP_START=0x1C000000
 CONFIG_RT2880_MTD_PHYSMAP_LEN=0x1000000
 CONFIG_RT2880_MTD_PHYSMAP_BUSWIDTH=2
@@ -1055,9 +1055,6 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_SERIAL_NONSTANDARD is not set
 # CONFIG_TRACE_SINK is not set
 CONFIG_RALINK_GPIO=y
-CONFIG_RALINK_GPIOMODE_GE1=y
-CONFIG_RALINK_GPIOMODE_GE2=y
-# CONFIG_RALINK_GPIOMODE_WLED is not set
 # CONFIG_RALINK_GPIOMODE_EPHY is not set
 # CONFIG_RALINK_GPIOMODE_MDIO is not set
 # CONFIG_RALINK_GPIOMODE_PA_G is not set
@@ -1966,8 +1963,8 @@ CONFIG_RT2860V2_AP_APCLI=y
 # CONFIG_RT2860V2_AP_IDS is not set
 CONFIG_RT2860V2_AP_GREENAP=y
 # CONFIG_RT2860V2_AP_VIDEO_TURBINE is not set
-# CONFIG_INTERNAL_PA_INTERNAL_LNA is not set
-CONFIG_INTERNAL_PA_EXTERNAL_LNA=y
+CONFIG_INTERNAL_PA_INTERNAL_LNA=y
+# CONFIG_INTERNAL_PA_EXTERNAL_LNA is not set
 # CONFIG_EXTERNAL_PA_EXTERNAL_LNA is not set
 CONFIG_RT2860V2_AP_RTMP_INTERNAL_TX_ALC=y
 # CONFIG_RT2860V2_AP_RTMP_TEMPERATURE_COMPENSATION is not set
