--- a/trunk/configs/templates/ac1200hp_base.config
+++ b/trunk/configs/templates/ac1200hp_base.config
@@ -3,10 +3,9 @@ CONFIG_VENDOR=Ralink
 CONFIG_PRODUCT=MT7620
 
 ### Target ProductID (board select, max 12 symbols)
-CONFIG_FIRMWARE_PRODUCT_ID="RT-N54U"
+CONFIG_FIRMWARE_PRODUCT_ID="RT-AC1200HP"
 
 ### Linux kernel and toolchain
-#CONFIG_LINUXDIR=linux-3.0.x
 CONFIG_LINUXDIR=linux-3.4.x
 CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
 
@@ -24,7 +23,7 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
 CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
 
 ### Kernel driver select for WiFi AP 5GHz
-### 3.0 = MT7602E v3.0.3.2
+### 3.0 = MT7612E v3.0.3.2
 CONFIG_FIRMWARE_WIFI5_DRIVER=3.0
 
 ### Enable IPv6 support
