rt_rdm: fix build

--- a/trunk/user/utils/reg/Makefile
+++ b/trunk/user/utils/reg/Makefile
@@ -1,6 +1,6 @@
 EXEC = reg
 OBJS = reg.o
-CFLAGS += -I$(ROOTDIR)/$(LINUXDIR)/drivers/net/rt_rdm -I$(ROOTDIR)/$(LINUXDIR)/include
+CFLAGS += -I$(ROOTDIR)/$(LINUXDIR)/drivers/net/rt_rdm
 
 all: $(EXEC)
 
