project configs: update ASUS RT-N56U B1 target

--- a/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.106 Kernel Configuration
+# Linux/mips 3.4.107 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -851,13 +851,11 @@ CONFIG_MTD_SPI_RALINK=y
 # CONFIG_MTD_SPI_FAST_CLOCK is not set
 CONFIG_MTD_SPI_READ_NORM=y
 # CONFIG_MTD_SPI_READ_FAST is not set
-# CONFIG_MTD_SPI_READ_DOR is not set
-# CONFIG_MTD_SPI_READ_DIOR is not set
 # CONFIG_RT2880_FLASH_4M is not set
 # CONFIG_RT2880_FLASH_8M is not set
-# CONFIG_RT2880_FLASH_16M is not set
+CONFIG_RT2880_FLASH_16M=y
 # CONFIG_RT2880_FLASH_32M is not set
-CONFIG_RT2880_FLASH_AUTO=y
+# CONFIG_RT2880_FLASH_AUTO is not set
 CONFIG_RT2880_MTD_PHYSMAP_START=0x1FC00000
 CONFIG_RT2880_MTD_PHYSMAP_LEN=0x0400000
 CONFIG_RT2880_MTD_PHYSMAP_BUSWIDTH=2
@@ -1900,8 +1898,7 @@ CONFIG_RAETH=y
 CONFIG_RAETH_NAPI=y
 # CONFIG_RAETH_NAPI_GRO is not set
 CONFIG_RAETH_BQL=y
-# CONFIG_RAETH_QDMA is not set
-# CONFIG_RAETH_JUMBOFRAME is not set
+CONFIG_RAETH_QDMA=y
 CONFIG_RAETH_HW_VLAN_RX=y
 CONFIG_RAETH_HW_VLAN_TX=y
 CONFIG_RAETH_CHECKSUM_OFFLOAD=y
@@ -2085,7 +2082,8 @@ CONFIG_RA_HW_NAT_TCP_DLTA=5
 CONFIG_RA_HW_NAT_FIN_DLTA=5
 CONFIG_RA_HW_NAT_NTU_DLTA=5
 # CONFIG_RA_HW_NAT_PREBIND is not set
-# CONFIG_RA_HW_NAT_IPV6 is not set
+CONFIG_RA_HW_NAT_IPV6=y
+# CONFIG_RA_HW_NAT_QDMA is not set
 # CONFIG_RA_HW_NAT_MCAST is not set
 # CONFIG_RA_HW_NAT_PCI is not set
 CONFIG_RA_HW_NAT_WIFI=y
