rc,httpd,www: allow set fixed TX mode on MainAP, add VHT mode to fixed TX modes, tidy

--- a/trunk/user/shared/Makefile
+++ b/trunk/user/shared/Makefile
@@ -10,7 +10,7 @@ CFLAGS += -Wall -I. -I./include -I$(ROOTDIR)/$(LINUXDIR)/include/nvram
 
 LDFLAGS += -L.
 
-OBJS := shutils.o netutils.o defaults.o nvram_linux.o notify_rc.o bin_sem_asus.o flash_mtd.o pids.o
+OBJS := shutils.o netutils.o rtutils.o defaults.o nvram_linux.o notify_rc.o bin_sem_asus.o flash_mtd.o pids.o
 
 all: libshared.so
 
