--- a/trunk/configs/boards/RT-N56U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N56U/kernel-3.4.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.107 Kernel Configuration
+# Linux/mips 3.4.108 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -602,11 +602,11 @@ CONFIG_BRIDGE_EBT_T_FILTER=m
 # CONFIG_BRIDGE_EBT_802_3 is not set
 # CONFIG_BRIDGE_EBT_AMONG is not set
 # CONFIG_BRIDGE_EBT_ARP is not set
-# CONFIG_BRIDGE_EBT_IP is not set
+CONFIG_BRIDGE_EBT_IP=m
 # CONFIG_BRIDGE_EBT_IP6 is not set
 # CONFIG_BRIDGE_EBT_LIMIT is not set
 # CONFIG_BRIDGE_EBT_MARK is not set
-# CONFIG_BRIDGE_EBT_PKTTYPE is not set
+CONFIG_BRIDGE_EBT_PKTTYPE=m
 # CONFIG_BRIDGE_EBT_STP is not set
 # CONFIG_BRIDGE_EBT_VLAN is not set
 # CONFIG_BRIDGE_EBT_ARPREPLY is not set
