uclibc: Add eventfd_read() and eventfd_write(), upstream commits

--- a/trunk/libc/uClibc-0.9.33.2/Makefile.in
+++ b/trunk/libc/uClibc-0.9.33.2/Makefile.in
@@ -269,7 +269,10 @@ HEADERS_RM-$(UCLIBC_HAS_WCHAR)               += wchar.h wctype.h
 HEADERS_RM-$(UCLIBC_HAS_WORDEXP)             += wordexp.h
 HEADERS_RM-$(UCLIBC_HAS_XATTR)               += sys/xattr.h
 HEADERS_RM-$(UCLIBC_HAS_XLOCALE)             += xlocale.h
-HEADERS_RM-$(UCLIBC_LINUX_SPECIFIC)          += sys/eventfd.h sys/fsuid.h \
+HEADERS_RM-$(UCLIBC_LINUX_SPECIFIC)          += \
+	bits/eventfd.h \
+	sys/eventfd.h \
+	sys/fsuid.h \
 	bits/inotify.h \
 	sys/inotify.h \
 	sys/kdaemon.h \
