rc: ability to run Optware/Entware from NAND flash partition

--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -128,6 +128,7 @@ endif
 ifdef CONFIG_MTD_UBI
 ifndef CONFIG_USB_SUPPORT
 dir_y						+= util-linux
+dir_y						+= optware
 endif
 dir_y						+= mtd-utils
 endif
