--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -81,6 +81,8 @@ romfs:
 	cd $(INSTALLDIR)/sbin && ln -sf rc start_ddns
 	cd $(INSTALLDIR)/sbin && ln -sf rc restart_dns
 	cd $(INSTALLDIR)/sbin && ln -sf rc restart_dhcpd
+	cd $(INSTALLDIR)/sbin && ln -sf rc restart_vpn_server
+	cd $(INSTALLDIR)/sbin && ln -sf rc restart_vpn_client
 	cd $(INSTALLDIR)/sbin && ln -sf rc run_telnetd
 	cd $(INSTALLDIR)/sbin && ln -sf rc restart_firewall
 	cd $(INSTALLDIR)/sbin && ln -sf rc pids
