--- a/trunk/configs/boards/RT-N11P/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N11P/kernel-3.4.x.config
@@ -206,7 +206,7 @@ CONFIG_ANON_INODES=y
 CONFIG_EXPERT=y
 # CONFIG_SYSCTL_SYSCALL is not set
 # CONFIG_KALLSYMS is not set
-CONFIG_HOTPLUG=y
+# CONFIG_HOTPLUG is not set
 CONFIG_PRINTK=y
 CONFIG_BUG=y
 # CONFIG_ELF_CORE is not set
@@ -316,7 +316,6 @@ CONFIG_HW_HAS_PCI=y
 # CONFIG_PCI is not set
 # CONFIG_ARCH_SUPPORTS_MSI is not set
 CONFIG_MMU=y
-# CONFIG_PCCARD is not set
 
 #
 # Executable file formats
@@ -537,7 +536,6 @@ CONFIG_IP_NF_RAW=m
 #
 CONFIG_NF_DEFRAG_IPV6=y
 CONFIG_NF_CONNTRACK_IPV6=y
-# CONFIG_IP6_NF_QUEUE is not set
 CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_MATCH_AH is not set
 # CONFIG_IP6_NF_MATCH_EUI64 is not set
@@ -698,8 +696,6 @@ CONFIG_ASUS_NVRAM_API=y
 #
 # Generic Driver Options
 #
-CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
-# CONFIG_DEVTMPFS is not set
 CONFIG_STANDALONE=y
 # CONFIG_PREVENT_FIRMWARE_BUILD is not set
 # CONFIG_FW_LOADER is not set
@@ -771,16 +767,16 @@ CONFIG_MTD_CFI_I2=y
 # CONFIG_MTD_UBI is not set
 
 #
-# Ralink Flash Type support
+# Ralink MTD support
 #
 CONFIG_MTD_RALINK=y
 CONFIG_MTD_SPI_RALINK=y
+# CONFIG_MTD_NAND_RALINK is not set
 CONFIG_MTD_SPI_FAST_CLOCK=y
 # CONFIG_MTD_SPI_READ_NORM is not set
 # CONFIG_MTD_SPI_READ_FAST is not set
 CONFIG_MTD_SPI_READ_DOR=y
 # CONFIG_MTD_SPI_READ_DIOR is not set
-# CONFIG_MTD_NAND_RALINK is not set
 # CONFIG_RT2880_FLASH_4M is not set
 CONFIG_RT2880_FLASH_8M=y
 # CONFIG_RT2880_FLASH_16M is not set
@@ -900,13 +896,9 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_SERIAL_NONSTANDARD is not set
 # CONFIG_TRACE_SINK is not set
 CONFIG_RALINK_GPIO=y
-# CONFIG_RALINK_GPIOMODE_GE1 is not set
-# CONFIG_RALINK_GPIOMODE_GE2 is not set
-# CONFIG_RALINK_GPIOMODE_WLED is not set
 CONFIG_RALINK_GPIOMODE_EPHY=y
 # CONFIG_RALINK_GPIOMODE_MDIO is not set
 CONFIG_RALINK_GPIOMODE_PA_G=y
-# CONFIG_RALINK_GPIOMODE_UARTL is not set
 CONFIG_RALINK_GPIOMODE_UARTF=y
 # CONFIG_RALINK_GPIOMODE_SPI is not set
 CONFIG_RALINK_GPIOMODE_SPI_REFCLK=y
@@ -1371,8 +1363,8 @@ CONFIG_GENERIC_ATOMIC64=y
 CONFIG_RAETH=y
 CONFIG_RAETH_NAPI=y
 # CONFIG_RAETH_NAPI_GRO is not set
-# CONFIG_RAETH_JUMBOFRAME is not set
 CONFIG_RAETH_BQL=y
+# CONFIG_RAETH_JUMBOFRAME is not set
 CONFIG_RAETH_HW_VLAN_TX=y
 CONFIG_RAETH_CHECKSUM_OFFLOAD=y
 CONFIG_RAETH_SG_DMA_TX=y
@@ -1423,6 +1415,7 @@ CONFIG_RT_SECOND_IF_NONE=y
 # CONFIG_RT_SECOND_IF_MT7612E is not set
 # CONFIG_RT_SECOND_IF_MT7602E is not set
 # CONFIG_RT_SECOND_IF_MT7603E is not set
+CONFIG_RT_SECOND_CARD=0
 
 #
 # Wireless drivers settings
