project configs: update RT-N56U_B1 target

--- a/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
@@ -51,7 +51,7 @@ CONFIG_RALINK_MT7621=y
 CONFIG_MT7621_ASIC=y
 CONFIG_PCIE_PORT0=y
 CONFIG_PCIE_PORT1=y
-CONFIG_PCIE_PORT2=y
+# CONFIG_PCIE_PORT2 is not set
 # CONFIG_PCIE_PERST_ONLY is not set
 # CONFIG_RALINK_MT7621_PLL900 is not set
 # CONFIG_RALINK_SYSTICK_COUNTER is not set
@@ -2034,6 +2034,7 @@ CONFIG_MT76X3_AP_APCLI=y
 # CONFIG_MT76X3_AP_NETIF_BLOCK is not set
 # CONFIG_MT76X3_AP_DFS is not set
 # CONFIG_MT76X3_AP_CARRIER is not set
+# CONFIG_MT76X3_AP_BAND_STEERING is not set
 CONFIG_MT76X3_AP_GREENAP=y
 # CONFIG_MT76X3_AP_DLS is not set
 # CONFIG_MT76X3_AP_IDS is not set
