--- a/trunk/proprietary/rt_wifi/rtpci/4.0.X.X/mt76x3_ap/Makefile
+++ b/trunk/proprietary/rt_wifi/rtpci/4.0.X.X/mt76x3_ap/Makefile
@@ -227,6 +227,7 @@ EXTRA_CFLAGS += -DCONFIG_AP_SUPPORT -DUAPSD_SUPPORT -DDOT11_N_SUPPORT -DDOT1X_SU
 EXTRA_CFLAGS += -DAP_SCAN_SUPPORT -DSCAN_SUPPORT
 EXTRA_CFLAGS += -DRTMP_MAC_PCI -DRTMP_PCI_SUPPORT -DIP_ASSEMBLY
 EXTRA_CFLAGS += -DSTATS_COUNT_SUPPORT -DENHANCED_STAT_DISPLAY
+#EXTRA_CFLAGS += -DRSSI_FEEDBACK
 EXTRA_CFLAGS += -DRESOURCE_PRE_ALLOC -DLOAD_FW_ONE_TIME
 
 ifeq ($(CONFIG_RT_FIRST_CARD),2860)
