boards profiles: update RT-AC54U & RT-AC1200HP kernel config

--- a/trunk/configs/boards/RT-AC54U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC54U/kernel-3.4.x.config
@@ -1994,6 +1994,7 @@ CONFIG_MT76X2_AP_APCLI=y
 # CONFIG_MT76X2_AP_DFS is not set
 # CONFIG_MT76X2_AP_CARRIER is not set
 # CONFIG_MT76X2_AP_ED_MONITOR is not set
+# CONFIG_MT76X2_AP_BAND_STEERING is not set
 CONFIG_MT76X2_AP_GREENAP=y
 # CONFIG_MT76X2_AP_DLS is not set
 # CONFIG_MT76X2_AP_IDS is not set
