vsftpd: update to 3.0.3

--- a/trunk/user/vsftpd/Makefile
+++ b/trunk/user/vsftpd/Makefile
@@ -1,19 +1,22 @@
 # Makefile for systems with GNU tools
 
-TOP = $(ROOTDIR)/user
+TOP	 = $(ROOTDIR)/user
 
-INSTALL	= install
-IFLAGS  = -idirafter dummyinc
+IFLAGS	 = -idirafter dummyinc
 
-CFLAGS	+= -O2 -Wall -W -Wshadow
-CFLAGS  += -I$(TOP)/shared
+CFLAGS	+= -O2 -Wall -W -Wshadow -Wformat-security -D_FORTIFY_SOURCE=2
+CFLAGS	+= -I$(TOP)/shared
 CFLAGS	+= -I$(TOP)/libdisk
-CFLAGS	+= -ffunction-sections -fdata-sections
+CFLAGS	+= -ffunction-sections -fdata-sections #-Werror
 
 LIBS	= #-lcrypt
 LINK	= -Wl,-s
 
-LDFLAGS	= -L$(TOP)/libdisk -ldisk -L$(TOP)/shared -lshared
+LDFLAGS	 = -L$(TOP)/libdisk -ldisk -L$(TOP)/shared -lshared
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_FTPD_SSL),y)
+CFLAGS	+= -DVSF_BUILD_SSL
+LDFLAGS	+= -L$(STAGEDIR)/lib -lssl -lcrypto
+endif
 LDFLAGS	+= -Wl,--gc-sections
 
 OBJS	= main.o utility.o prelogin.o ftpcmdio.o postlogin.o privsock.o \
@@ -22,18 +25,18 @@ OBJS	= main.o utility.o prelogin.o ftpcmdio.o postlogin.o privsock.o \
 	banner.o filestr.o parseconf.o secutil.o \
 	ascii.o oneprocess.o twoprocess.o privops.o standalone.o hash.o \
 	tcpwrap.o ipaddrparse.o access.o features.o readwrite.o opts.o \
-	ssl.o sslslave.o ptracesandbox.o ftppolicy.o sysutil.o sysdeputil.o
+	ssl.o sslslave.o ptracesandbox.o ftppolicy.o sysutil.o sysdeputil.o \
+	seccompsandbox.o
 
 .c.o:
 	$(CC) -c $*.c $(CFLAGS) $(IFLAGS)
 
 vsftpd: $(OBJS) 
-	$(CC) -o vsftpd $(OBJS) $(LINK) $(LIBS) $(LDFLAGS)
+	$(CC) -o vsftpd $(OBJS) $(LINK) $(LDFLAGS) $(LIBS)
 
 clean:
 	rm -f *.o *.swp vsftpd
 
 romfs:
-	$(STRIP) vsftpd
+	mkdir -p $(INSTALLDIR)/usr/share/empty
 	$(ROMFSINST) /sbin/vsftpd
-
