vsftpd: exclude unused 'seccomp_sandbox' param

--- a/trunk/user/vsftpd/Makefile
+++ b/trunk/user/vsftpd/Makefile
@@ -4,10 +4,10 @@ TOP	 = $(ROOTDIR)/user
 
 IFLAGS	 = -idirafter dummyinc
 
-CFLAGS	+= -O2 -Wall -W -Wshadow -Wformat-security -D_FORTIFY_SOURCE=2
+CFLAGS	+= -O2 -Wall -W -Werror -Wshadow -Wformat-security -D_FORTIFY_SOURCE=2
 CFLAGS	+= -I$(TOP)/shared
 CFLAGS	+= -I$(TOP)/libdisk
-CFLAGS	+= -ffunction-sections -fdata-sections #-Werror
+CFLAGS	+= -ffunction-sections -fdata-sections
 
 LIBS	= #-lcrypt
 LINK	= -Wl,-s
