--- a/trunk/configs/boards/SWR1100/kernel-3.4.x.config
+++ b/trunk/configs/boards/SWR1100/kernel-3.4.x.config
@@ -983,6 +983,7 @@ CONFIG_PPP_SYNC_TTY=y
 # CONFIG_USB_PEGASUS is not set
 CONFIG_USB_USBNET=m
 # CONFIG_USB_NET_AX8817X is not set
+# CONFIG_USB_NET_AX88179_178A is not set
 CONFIG_USB_NET_CDCETHER=m
 # CONFIG_USB_NET_CDC_EEM is not set
 CONFIG_USB_NET_CDC_NCM=m
