project configs: update kernel-3.4 configs

--- a/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
@@ -936,6 +936,8 @@ CONFIG_PPP_SYNC_TTY=y
 #
 # CONFIG_USB_KAWETH is not set
 # CONFIG_USB_PEGASUS is not set
+# CONFIG_USB_RTL8150 is not set
+# CONFIG_USB_RTL8152 is not set
 CONFIG_USB_USBNET=m
 # CONFIG_USB_NET_AX8817X is not set
 # CONFIG_USB_NET_AX88179_178A is not set
