--- a/trunk/configs/boards/RT-N65U/kernel-3.0.x.config
+++ b/trunk/configs/boards/RT-N65U/kernel-3.0.x.config
@@ -896,6 +896,7 @@ CONFIG_WLAN=y
 # CONFIG_USB_PEGASUS is not set
 CONFIG_USB_USBNET=m
 # CONFIG_USB_NET_AX8817X is not set
+# CONFIG_USB_NET_AX88179_178A is not set
 CONFIG_USB_NET_CDCETHER=m
 # CONFIG_USB_NET_CDC_EEM is not set
 CONFIG_USB_NET_CDC_NCM=m
