wifi drivers: MT7603E: allow eFuse K-free IC data on fallback from FLASH mode

--- a/trunk/proprietary/rt_wifi/rtpci/4.0.X.X/mt76x3_ap/Makefile
+++ b/trunk/proprietary/rt_wifi/rtpci/4.0.X.X/mt76x3_ap/Makefile
@@ -240,9 +240,6 @@ EXTRA_CFLAGS += -DEEPROM_COUNTRY_UNLOCK
 # provide external Flash memory support
 EXTRA_CFLAGS += -DRTMP_FLASH_SUPPORT
 
-# provide internal eFuse memory support
-#EXTRA_CFLAGS += -DRTMP_EFUSE_SUPPORT -DCAL_FREE_IC_SUPPORT
-
 # provide roaming support
 #EXTRA_CFLAGS += -DIAPP_SUPPORT
 
@@ -267,6 +264,7 @@ EXTRA_CFLAGS += -DFIFO_EXT_SUPPORT
 EXTRA_CFLAGS += -DMCS_LUT_SUPPORT
 #EXTRA_CFLAGS += -DPEER_DELBA_TX_ADAPT
 EXTRA_CFLAGS += -DRTMP_WLAN_HOOK_SUPPORT -DUSE_BMC
+EXTRA_CFLAGS += -DRTMP_EFUSE_SUPPORT -DCAL_FREE_IC_SUPPORT
 
 ifeq ($(CONFIG_MT76X3_AP_READ_MAC_FROM_MTD),y)
 EXTRA_CFLAGS += -DREAD_MAC_FROM_EEPROM
