--- a/trunk/configs/templates/n56ub1_full.config
+++ b/trunk/configs/templates/n56ub1_full.config
@@ -19,7 +19,7 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
 #CONFIG_FIRMWARE_TYPE_ROOTFS_IN_RAM=y
 
 ### Kernel driver select for WiFi AP 2.4GHz
-### 4.0 = MT7603E v4.0.0.7
+### 4.0 = MT7603E v4.0.0.9
 CONFIG_FIRMWARE_WIFI2_DRIVER=4.0
 
 ### Kernel driver select for WiFi AP 5GHz
@@ -160,6 +160,9 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
 
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
+
+### Include Elliptic Curves (EC) to openssl library. ~0.1MB
+CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
 
 ### Include "openssl" executable for generate certificates. ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
