--- a/trunk/configs/templates/n65u_base.config
+++ b/trunk/configs/templates/n65u_base.config
@@ -162,6 +162,9 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
+### Include Elliptic Curves (EC) to openssl library. ~0.1MB
+CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
+
 ### Include "openssl" executable for generate certificates. ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 
