wifi drivers: temporarily disable buggy QuickInitMCSRate RateCtrl algorithm on MT7612 (periodic drop to CCK issue)

--- a/trunk/proprietary/rt_wifi/rtpci/3.0.X.X/mt76x2_ap/Makefile
+++ b/trunk/proprietary/rt_wifi/rtpci/3.0.X.X/mt76x2_ap/Makefile
@@ -257,14 +257,15 @@ EXTRA_CFLAGS += -DRLT_MAC -DRLT_BBP -DMT_RF -DRTMP_RF_RW_SUPPORT
 EXTRA_CFLAGS += -DA_BAND_SUPPORT
 EXTRA_CFLAGS += -DRX_DMA_SCATTER -DCONFIG_ANDES_SUPPORT
 EXTRA_CFLAGS += -DNEW_RATE_ADAPT_SUPPORT
+#EXTRA_CFLAGS += -DNEW_RATE_ADAPT_QUICK_DOWN # has dropdown to CCK/0 issue on 5GHz
 EXTRA_CFLAGS += -DFIFO_EXT_SUPPORT
 EXTRA_CFLAGS += -DDYNAMIC_VGA_SUPPORT
 EXTRA_CFLAGS += -DMCS_LUT_SUPPORT -DPEER_DELBA_TX_ADAPT
 EXTRA_CFLAGS += -DDROP_MASK_SUPPORT
 #EXTRA_CFLAGS += -DMULTI_CLIENT_SUPPORT
-EXTRA_CFLAGS += -DSPECIFIC_TX_POWER_SUPPORT
 EXTRA_CFLAGS += -DRTMP_TEMPERATURE_TX_ALC
 #EXTRA_CFLAGS += -DSPECIFIC_BCN_BUF_SUPPORT
+#EXTRA_CFLAGS += -DSPECIFIC_TX_POWER_SUPPORT
 
 ifeq ($(CONFIG_MT76X2_AP_READ_MAC_FROM_MTD),y)
 EXTRA_CFLAGS += -DREAD_MAC_FROM_EEPROM
