--- a/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
@@ -2034,12 +2034,16 @@ CONFIG_MT76X3_AP_LLTD=y
 CONFIG_MT76X3_AP_WDS=y
 CONFIG_MT76X3_AP_MBSS=y
 CONFIG_MT76X3_AP_APCLI=y
+# CONFIG_MT76X3_AP_MULTI_APCLI_SUPPORT is not set
 # CONFIG_MT76X3_AP_MAC_REPEATER is not set
+# CONFIG_MT76X3_AP_AIRPLAY_SUPPORT is not set
 # CONFIG_MT76X3_AP_NETIF_BLOCK is not set
 # CONFIG_MT76X3_AP_DFS is not set
 # CONFIG_MT76X3_AP_CARRIER is not set
 # CONFIG_MT76X3_AP_BAND_STEERING is not set
-CONFIG_MT76X3_AP_GREENAP=y
+# CONFIG_MT76X3_AP_DOT11R_FT_SUPPORT is not set
+# CONFIG_MT76X3_AP_DOT11K_RRM_SUPPORT is not set
+# CONFIG_MT76X3_AP_GREENAP is not set
 # CONFIG_MT76X3_AP_DLS is not set
 # CONFIG_MT76X3_AP_IDS is not set
 # CONFIG_MT76X3_AP_80211N_DRAFT3 is not set
