project configs: sync root .config with n56u_dlna.config

--- a/trunk/.config
+++ b/trunk/.config
@@ -26,7 +26,7 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
 
 ### Kernel driver select for WiFi AP 5GHz
 ### 2.4 = RT3883/3662 v2.4.3.6
-### 2.7 = RT3883/3662 v2.7.1.6
+### 2.7 = RT3883/3662 v2.7.2.0
 CONFIG_FIRMWARE_WIFI5_DRIVER=2.7
 
 ### Kernel driver select for WiFi AP 2.4GHz
@@ -93,7 +93,7 @@ CONFIG_FIRMWARE_INCLUDE_IPSET=y
 CONFIG_FIRMWARE_INCLUDE_NFSD=y
 
 ### Include NFSv3 client. ~0.5MB
-CONFIG_FIRMWARE_INCLUDE_NFSC=y
+#CONFIG_FIRMWARE_INCLUDE_NFSC=y
 
 ### Include CIFS (SMB) client. ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_CIFS=y
@@ -134,10 +134,13 @@ CONFIG_FIRMWARE_INCLUDE_HDPARM=y
 ### Include "parted" utility (allow make GPT partitions). ~0.3MB
 #CONFIG_FIRMWARE_INCLUDE_PARTED=y
 
-### Include SMB server. ~1.5MB
+### Include SMB (and WINS) server. ~1.5MB
 CONFIG_FIRMWARE_INCLUDE_SMBD=y
 
-### Include syslog for SMB server. ~0.3MB
+### Include WINS server only. ~0.4MB
+#CONFIG_FIRMWARE_INCLUDE_WINS=y
+
+### Include syslog for SMB and WINS server. ~0.3MB
 #CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
 
 ### Include FTP server. ~0.2MB
@@ -167,8 +170,11 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
+### Include Elliptic Curves (EC) to openssl library. ~0.1MB
+#CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
+
 ### Include "openssl" executable for generate certificates. ~0.4MB
-#CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
+CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 
 ### Include xUPNPd IPTV mediaserver. ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
