--- a/trunk/user/utils/hw_nat/Makefile
+++ b/trunk/user/utils/hw_nat/Makefile
@@ -11,8 +11,9 @@ CFLAGS += -I$(ROOTDIR)/$(LINUXDIR)/net/nat/hw_nat
 
 ifdef CONFIG_HNAT_V2
 CFLAGS += -DCONFIG_HNAT_V2
-ifdef CONFIG_RA_HW_NAT_MCAST
 ifdef CONFIG_RALINK_MT7621
+CFLAGS += -DCONFIG_RALINK_MT7621
+ifdef CONFIG_RA_HW_NAT_MCAST
 CFLAGS += -DCONFIG_PPE_MCAST
 endif
 endif
