project configs: update MT7621-related kernel configs (RT-N56U_B1)

--- a/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
@@ -1900,6 +1900,7 @@ CONFIG_RAETH_NAPI=y
 # CONFIG_RAETH_NAPI_GRO is not set
 CONFIG_RAETH_BQL=y
 CONFIG_RAETH_QDMA=y
+# CONFIG_RAETH_QDMATX_QDMARX is not set
 CONFIG_RAETH_HW_VLAN_RX=y
 CONFIG_RAETH_HW_VLAN_TX=y
 CONFIG_RAETH_CHECKSUM_OFFLOAD=y
